# Seagull

./: Procfile  README.md  Seagull.cabal
app/: Main.hs
src/: Main.hs
src/Seagull/: Content.hs  Seagull.hs
