name:                Seagull
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Seagull#readme
license:             BSD3
license-file:        LICENSE
author:              Kai Sara Fransson
maintainer:          franssonkai@gmail.com
copyright:           2017 Kai Sara Fransson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Seagull
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , warp
                     , wai
                     , http-types
                     , simple
                     , bytestring
                     , blaze-html